--- a/chatloja/public/index.html
+++ b/chatloja/public/index.html
@@ -118,12 +118,18 @@
           <div class="chat-body" id="messages"></div>
 
           <form id="messageForm" class="chat-input" style="display: flex; align-items: center; gap: 8px;">
-            <!-- Ícone de emoji (esquerda) -->
-            <button type="button" class="btn btn-ghost chat-emoji-btn" tabindex="-1" aria-label="Emoji">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M8 15s1.5 2 4 2 4-2 4-2"/><line x1="9" y1="9" x2="9.01" y2="9"/><line x1="15" y1="9" x2="15.01" y2="9"/></svg>
-            </button>
+            <!-- Emoji Picker -->
+            <div style="position:relative;">
+              <button type="button" class="btn btn-ghost chat-emoji-btn" tabindex="-1" aria-label="Emoji">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M8 15s1.5 2 4 2 4-2 4-2"/><line x1="9" y1="9" x2="9.01" y2="9"/><line x1="15" y1="9" x2="15.01" y2="9"/></svg>
+              </button>
+              <div id="emojiPicker" style="display:none; position:absolute; top:36px; left:0; background:#fff; border:1px solid #ccc; border-radius:8px; z-index:10; padding:8px; max-width:220px; max-height:180px; overflow:auto;">
+                😀 😃 😄 😁 😆 😅 😂 🤣 😊 😇 🙂 🙃 😉 😌 😍 🥰 😘 😗 😙 😚 😋 😜 🤪 😝 😛 🤑 🤗 🤭 🤫 🤔 🤐 🤨 😐 😑 😶 🙄 😏 😒 😞 😔 😟 😕 🙁 ☹️ 😣 😖 😫 😩 🥺 😢 😭 😤 😠 😡 🤬 🤯 😳 🥵 🥶 😱 😨 😰 😥 😓 🤗 🤔
+              </div>
+            </div>
             <!-- Ícone de clipe de papel (esquerda) -->
-            <button type="button" class="btn btn-ghost chat-clip-btn" tabindex="-1" aria-label="Anexar arquivo">
+            <input type="file" id="clipInput" style="display:none" multiple accept=".pdf,.doc,.docx,.xls,.xlsx,.png,.jpg,.jpeg,.gif,.mp3,.wav,.ogg,.webm,.mp4,.mov,.avi,.m4a,.aac,.txt,.csv,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/pdf,image/*,audio/*,video/*">
+            <button type="button" class="btn btn-ghost chat-clip-btn" tabindex="-1" aria-label="Anexar arquivo" onclick="document.getElementById('clipInput').click()">
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.44 11.05l-9.19 9.19a5 5 0 0 1-7.07-7.07l10.61-10.61a3 3 0 0 1 4.24 4.24l-10.61 10.61a1 1 0 0 1-1.41-1.41l9.19-9.19"/></svg>
             </button>
             <!-- Campo de entrada -->
@@ -136,7 +142,8 @@
                 style="padding-right:70px; padding-left:10px; width:100%;"
               />
               <!-- Ícone de câmera (direita) -->
-              <span style="position:absolute; right:38px; top:50%; transform:translateY(-50%); cursor:pointer;">
+              <input type="file" id="cameraInput" style="display:none" accept="image/*,video/*" capture="environment">
+              <span style="position:absolute; right:38px; top:50%; transform:translateY(-50%); cursor:pointer;" onclick="document.getElementById('cameraInput').click()">
                 <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 19V7a2 2 0 0 0-2-2h-3.17a2 2 0 0 1-1.41-.59l-1.83-1.83A2 2 0 0 0 12.17 2H11.83a2 2 0 0 0-1.41.59L8.59 4.41A2 2 0 0 1 7.17 5H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2z"/><circle cx="12" cy="13" r="4"/></svg>
               </span>
             </div>
