Correção: favicon e verificação usernameLower

--- a/chatloja/public/index.html
+++ b/chatloja/public/index.html
@@ -6,6 +6,7 @@
     <title>Chat Interno</title>
     <link rel="stylesheet" href="dist/output.css">
     <link rel="stylesheet" href="./styles.css" />
+    <!-- Removido referência ao favicon inexistente -->
   </head>
   <body>
     <div id="authGate" class="auth-gate" hidden>
