Refatoração: separa módulos, corrige sintaxe e organiza sistema

--- a/chatloja/public/index.html
+++ b/chatloja/public/index.html
@@ -261,6 +261,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="./firebase-config.js?v=20260204-30"></script>
+    <script src="./utils.js?v=20260204-30"></script>
+    <script src="./messages.js?v=20260204-30"></script>
+    <script src="./rooms.js?v=20260204-30"></script>
+    <script src="./auth.js?v=20260204-30"></script>
     <script src="./app.js?v=20260204-30"></script>
   </body>
 </html>
